# Pi-Motion

./: Grapher.py  MotionRecorder.py  MotionVectorReader.py  TODO.txt  cleanup.sh  config-template.yaml  config.yaml  convert.sh  data.py  event_loop.cpp  event_loop.h  main.cpp  main.py  meson.build  pimotion.service  readme.txt  requirements.txt  temperature.sh  webserver.py
web/: camera-controls.js  captures.html  live.html  play.html  styles.css  theme.css  video-controls.js
